--- a/jk-payroll/package.json
+++ b/jk-payroll/package.json
@@ -38,15 +38,19 @@
         "@radix-ui/react-toggle": "^1.1.2",
         "@radix-ui/react-toggle-group": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
+        "@react-pdf/renderer": "^4.3.0",
         "@tailwindcss/vite": "^4.0.6",
         "@types/react": "^19.0.3",
         "@types/react-dom": "^19.0.2",
         "@vitejs/plugin-react": "^4.3.4",
         "antd": "^5.24.7",
+        "axios": "^1.9.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
         "globals": "^15.14.0",
+        "jspdf": "^3.0.1",
+        "jspdf-autotable": "^5.0.2",
         "laravel-vite-plugin": "^1.0",
         "lucide-react": "^0.475.0",
         "react": "^19.0.0",
