--- a/jk-payroll/composer.json
+++ b/jk-payroll/composer.json
@@ -10,11 +10,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "guzzlehttp/guzzle": "^7.9",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "laravel/workos": "^0.1.0",
         "tightenco/ziggy": "^2.4",
+        "workos/workos-php": "^4.24",
         "workos/workos-php-laravel": "^4.1"
     },
     "require-dev": {
