--- a/jk-payroll/DockerFile
+++ b/jk-payroll/DockerFile
@@ -1,44 +1,32 @@
-# --- Stage 1: Build React Frontend ---
+# --- Stage 1: Build React ---
 FROM node:20 AS frontend
-
-WORKDIR /app/frontend
-
-COPY frontend/package.json frontend/package-lock.json ./
+WORKDIR /app
+COPY frontend/package*.json ./
 RUN npm install
-
 COPY frontend/ ./
 RUN npm run build
 
-# --- Stage 2: PHP + Laravel App ---
+# --- Stage 2: PHP + Laravel ---
 FROM php:8.2-fpm
 
-# Install dependencies
+# System dependencies
 RUN apt-get update && apt-get install -y \
-    git unzip curl libzip-dev libonig-dev sqlite3 libsqlite3-dev libpng-dev libjpeg-dev libfreetype6-dev libxml2-dev \
+    git curl unzip libzip-dev libpng-dev libonig-dev libxml2-dev sqlite3 libsqlite3-dev \
     && docker-php-ext-install pdo pdo_sqlite mbstring zip exif pcntl bcmath gd
 
-# Install Composer
+# Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
-# Set working directory
+# Laravel setup
 WORKDIR /var/www/html
-
-# Copy Laravel app
 COPY . .
 
-# Copy React build into Laravel public/
-COPY --from=frontend /app/frontend/dist ./public/
+# Copy frontend build into Laravel public
+COPY --from=frontend /app/dist/ ./public/
 
-# Install PHP dependencies
 RUN composer install --no-dev --optimize-autoloader
-
-# Set permissions
+RUN php artisan config:cache && php artisan route:cache && php artisan view:cache
 RUN chmod -R 777 storage bootstrap/cache
 
-# Laravel config cache
-RUN php artisan config:cache && php artisan route:cache && php artisan view:cache
-
-# Expose port for Laravel's internal server
 EXPOSE 8080
-
-CMD php artisan serve --host=0.0.0.0 --port=8080
+CMD ["php", "artisan", "serve", "--host=0.0.0.0", "--port=8080"]
